<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:background="@color/white"


        >

        <EditText
            android:id="@+id/txt_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_nombres"
            android:inputType="textPersonName"
            android:layout_marginHorizontal="65px"
            android:layout_marginTop="90px"
            android:layout_marginBottom="25px"
            />

        <EditText
            android:id="@+id/txt_telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_telefono"
            android:inputType="phone"
            android:layout_marginHorizontal="65px"
            android:layout_marginVertical="25px"

            />

        <EditText
            android:id="@+id/txt_direccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_direccion"
            android:inputType="textPersonName"
            android:layout_marginHorizontal="65px"
            android:layout_marginVertical="25px"
            />

        <EditText
            android:id="@+id/txt_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_correo"
            android:inputType="textEmailAddress"
            android:layout_marginHorizontal="65px"
            android:layout_marginVertical="25px"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="45px"
            >

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15px"
                android:layout_weight="1"
                android:onClick="onClick_DeleteContacto"
                android:text="@string/btn_eliminar" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15px"
                android:layout_weight="1"
                android:onClick="onClick_AddContacto"
                android:text="@string/btn_guardar" />
        </LinearLayout>

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="120px"
            android:layout_marginVertical="15px"
            android:onClick="startTabla"
            android:text="@string/btn_cancelar" />



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>